src/objects/QPMS__Inspection_Approver__c.object
<CustomObject>
    <description>This object is used to store inspection approver details</description>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>This field is used for saving Allowed days field</description>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process__c</fullName>
        <description>This field is used to save approval process</description>
        <label>Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_Name__c</fullName>
        <description>This will hold approver name</description>
        <formula>QPMS__User__r.LastName &amp; &quot;, &quot; &amp; QPMS__User__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Comments__c</fullName>
        <description>this field is for to capture approval history</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>This field is used for saving Date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Name__c</fullName>
        <description>This is used to store Inspection Name</description>
        <formula>if(QPMS__Inspection__c != null,QPMS__Inspection__r.Name,if(QPMS__Inspection_Task__c != null,QPMS__Inspection_Task__r.QPMS__Parent_Name__c,&apos;&apos;))</formula>
        <label>Inspection Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard_Name__c</fullName>
        <formula>if(QPMS__Inspection_Standard__c != null,QPMS__Inspection_Standard__r.QPMS__Name__c ,QPMS__Purchase_Order__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Standard Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is look up with inspection standard object.</description>
        <label>Inspection Standard</label>
        <referenceTo>QPMS__Inspection_Standard__c</referenceTo>
        <relationshipLabel>Inspection Approvers</relationshipLabel>
        <relationshipName>Inspection_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with inspection task</description>
        <label>Inspection Task</label>
        <referenceTo>QPMS__Inspection_Task__c</referenceTo>
        <relationshipLabel>Inspection Approvers</relationshipLabel>
        <relationshipName>Inspection_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with inspection.</description>
        <label>Inspection</label>
        <referenceTo>QPMS__Inspection__c</referenceTo>
        <relationshipLabel>Inspection Approvers</relationshipLabel>
        <relationshipName>Inspection_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds Parent Owner</description>
        <label>Parent Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Approvers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is look up with purchase order object.</description>
        <label>Purchase Order</label>
        <referenceTo>QPMS__Purchase_Order__c</referenceTo>
        <relationshipLabel>Inspection Approvers</relationshipLabel>
        <relationshipName>Inspection_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence_Position__c</fullName>
        <description>This field is used for saving sequence position value</description>
        <label>Sequence Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>This Field holds Sequence</description>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Status_Updated__c</fullName>
        <description>Its a date field</description>
        <label>Status Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field is used for saving Status Field</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Task_Parent__c</fullName>
        <description>It store the task parent Id</description>
        <formula>QPMS__Inspection_Task__r.QPMS__Inspection_Id__c</formula>
        <label>Task Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Task__c</fullName>
        <description>This will hold task type.</description>
        <formula>QPMS__Inspection_Task__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ if(QPMS__Inspection_Standard__c != null,QPMS__Inspection_Standard__r.Id ,if(QPMS__Purchase_Order__c != null,QPMS__Purchase_Order__r.Id,if(QPMS__Inspection__c != null,QPMS__Inspection__r.Id,if(QPMS__Inspection_Task__c !=null,QPMS__Inspection_Task__r.QPMS__Inspection_Id__c,&apos;&apos;))))</formula>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inspection Approver</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Inspection Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>